k8sdemo/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  rules:
  - host: nginx.example.local #此域名需解析到k8s集群负载主机IP
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /
